--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,7 @@
         "react/jsx-curly-newline": "error",
         "react/jsx-handler-names": "error",
         "react/jsx-indent-props": ["error", 4],
-        // "react/jsx-indent": ["error", 4],
+        "react/jsx-indent": ["error", 4],
         "react/jsx-key": "error",
         "react/jsx-max-props-per-line": ["error", { "maximum": 2 }],
         "react/jsx-no-bind": "off",
